--- a/src/styles/pages/blog.scss
+++ b/src/styles/pages/blog.scss
@@ -58,3 +58,14 @@
 	opacity: 0.64;
 	// flex-grow: 1;
 }
+.blog__feature-image {
+	// max-width: 100%;
+	overflow: hidden;
+	max-height: 25.6rem;
+	border-radius: 8px 8px 0 0;
+
+	img {
+		max-width: 100%;
+		object-fit: cover;
+	}
+}
