--- a/src/styles/shared/button.scss
+++ b/src/styles/shared/button.scss
@@ -10,6 +10,8 @@
 	transition: $default-transition;
 	text-transform: uppercase;
 	letter-spacing: 0.5px;
+	display: flex;
+	align-items: center;
 }
 
 .button--filled {
