--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,8 +3,9 @@
 // COMPONENTS
 @import './components/animatedHero.scss';
 @import './components/carousel.scss';
-@import './components/header.scss';
+@import './components/featuredItems.scss';
 @import './components/footer.scss';
+@import './components/header.scss';
 @import './components/pagination.scss';
 @import './components/withArrow.scss';
 // PAGES
