Added Latest Post

--- a/src/styles/components/featuredItems.scss
+++ b/src/styles/components/featuredItems.scss
@@ -12,7 +12,7 @@
 		background: $shiny-purp;
 	}
 }
-.featured-items__image {
+.featured-items__img {
 	overflow: hidden;
 	margin-top: -10rem;
 	height: 48rem;
