--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,6 +6,7 @@
 @import './components/featuredItems.scss';
 @import './components/footer.scss';
 @import './components/header.scss';
+@import './components/latestPost.scss';
 @import './components/pagination.scss';
 @import './components/withArrow.scss';
 // PAGES
