--- a/src/styles/components/featuredItems.scss
+++ b/src/styles/components/featuredItems.scss
@@ -1,6 +1,11 @@
 .featured-items {
 	display: flex;
-	height: 48rem;
+	flex-direction: column;
+	height: 96rem;
+	@include for-tablet-landscape-up {
+		flex-direction: row;
+		height: 48rem;
+	}
 }
 .featured-items__item {
 	flex-grow: 1;
@@ -34,5 +39,9 @@
 	a {
 		text-decoration: none;
 		color: #000;
+		p {
+			font-weight: 700;
+			font-size: 1.8rem;
+		}
 	}
 }
