--- a/src/styles/components/latestPost.scss
+++ b/src/styles/components/latestPost.scss
@@ -34,7 +34,21 @@
 		object-fit: cover;
 		min-height: 48rem;
 	}
+	display: none;
+	@include for-tablet-landscape-up {
+		display: initial;
+	}
 }
 .latest-post__text {
-	padding: 0 $l-size;
+	padding: 0 $xl-size;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 100%;
+	text-align: center;
+	@include for-tablet-landscape-up {
+		display: initial;
+		width: initial;
+		text-align: left;
+	}
 }
