--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -13,6 +13,7 @@
 @import './pages/about.scss';
 @import './pages/blog.scss';
 @import './pages/contact.scss';
+@import './pages/index.scss';
 @import './pages/post.scss';
 @import './pages/shop.scss';
 @import './pages/product.scss';
