Finished animated logo for now

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,6 +2,7 @@
 @import './global.scss';
 // COMPONENTS
 @import './components/animatedHero.scss';
+@import './components/animatedLogo.scss';
 @import './components/carousel.scss';
 @import './components/featuredItems.scss';
 @import './components/footer.scss';
