Added landing page sections

--- a/src/styles/components/landingHeader.scss
+++ b/src/styles/components/landingHeader.scss
@@ -3,6 +3,7 @@
 	min-height: 8.8rem;
 	display: flex;
 	align-items: center;
+	justify-content: space-between;
 	padding: 0 $xl-size;
 	color: #700961;
 	h1 {
@@ -10,5 +11,23 @@
 		font-size: 3.2rem;
 		letter-spacing: 1px;
 		margin-left: $xs-size;
+	}
+	div {
+		display: flex;
+		align-items: center;
+	}
+	nav {
+		a {
+			text-decoration: none;
+			text-transform: uppercase;
+			letter-spacing: 1.6px;
+			font-weight: 600;
+			color: #000;
+			transition: $default-transition;
+			margin-left: $l-size;
+			&:hover {
+				color: #700961;
+			}
+		}
 	}
 }
