--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -1,6 +1,7 @@
 // Colors
 // https://colorhunt.co/palette/220437
 $bg-black: #000;
+$bg-gray--o24: #dbd4db3d;
 $dark-purp-gray: #19171a;
 $pale-purp-gray: #4c3a56;
 $pale-purp-gray--o12: #4c3a561f;
