--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,12 +4,15 @@
 @import './components/animatedHero.scss';
 @import './components/animatedLogo.scss';
 @import './components/carousel.scss';
+@import './components/fastSection.scss';
 @import './components/featuredItems.scss';
 @import './components/footer.scss';
 @import './components/header.scss';
 @import './components/landingHeader.scss';
 @import './components/latestPost.scss';
 @import './components/pagination.scss';
+@import './components/sampleSiteCta.scss';
+@import './components/seoSection.scss';
 @import './components/withArrow.scss';
 // PAGES
 @import './pages/about.scss';
