--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -1,6 +1,7 @@
 .index__hero {
 	display: grid;
 	grid-template-columns: 1fr 40vw;
+	margin-bottom: $l-size;
 }
 
 .index__hero-cta {
@@ -32,4 +33,18 @@
 		background-size: 200% auto;
 		transition: 0.5s;
 	}
+}
+
+h3.index__section-eyebrow {
+	text-transform: uppercase;
+	letter-spacing: 1.8px;
+	opacity: 0.64;
+}
+
+p.index__section-text {
+	line-height: $leading-loose;
+	margin-right: $xl-size;
+}
+a.index__section-link {
+	color: #000;
 }
