--- a/src/styles/components/landingHeader.scss
+++ b/src/styles/components/landingHeader.scss
@@ -1,30 +1,41 @@
 .landing-header {
-	// background: #000;
 	min-height: 8.8rem;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	padding: 0 $xl-size;
+	padding: 0 $m-size;
+	@include for-tablet-landscape-up {
+		padding: 0 $xl-size;
+	}
 	color: #700961;
 	h1 {
 		font-weight: 500;
 		font-size: 3.2rem;
 		letter-spacing: 1px;
 		margin-left: $xs-size;
+		display: none;
+		@include for-tablet-landscape-up {
+			display: initial;
+		}
 	}
 	div {
 		display: flex;
 		align-items: center;
 	}
 	nav {
+		display: flex;
 		a {
 			text-decoration: none;
 			text-transform: uppercase;
-			letter-spacing: 1.6px;
 			font-weight: 600;
 			color: #000;
 			transition: $default-transition;
-			margin-left: $l-size;
+			letter-spacing: 1px;
+			margin-left: $s-size;
+			@include for-tablet-landscape-up {
+				letter-spacing: 1.6px;
+				margin-left: $l-size;
+			}
 			&:hover {
 				color: #700961;
 			}
