--- a/src/styles/components/fastSection.scss
+++ b/src/styles/components/fastSection.scss
@@ -1,7 +1,11 @@
 .fast-section {
 	display: grid;
-	grid-template-columns: 1fr 1fr;
-	height: 48vh;
+	grid-template-columns: 1fr;
+	@include for-tablet-landscape-up {
+		grid-template-columns: 1fr 1fr;
+		height: 48vh;
+	}
+	overflow: hidden;
 }
 .fast-section__copy {
 	padding: $l-size $xl-size $xl-size;
@@ -9,4 +13,7 @@
 }
 .fast-section__animation {
 	place-self: center;
+	@include for-phone-only {
+		display: none;
+	}
 }
