--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -1,7 +1,10 @@
 // Colors
 // https://colorhunt.co/palette/220437
+// https://colorhunt.co/palette/42937
 $bg-black: #000;
 $bg-gray--o24: #dbd4db3d;
+$bg-purp: #b636a2;
+// Sample Site Colors
 $dark-purp-gray: #19171a;
 $pale-purp-gray: #4c3a56;
 $pale-purp-gray--o12: #4c3a561f;
