--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,6 +4,7 @@
 @import './components/animatedHero.scss';
 @import './components/animatedLogo.scss';
 @import './components/carousel.scss';
+@import './components/contactForm.scss';
 @import './components/fastSection.scss';
 @import './components/featuredItems.scss';
 @import './components/footer.scss';
@@ -22,6 +23,7 @@
 @import './pages/post.scss';
 @import './pages/shop.scss';
 @import './pages/product.scss';
+@import './pages/thankYou.scss';
 // SHARED
 @import './shared/button.scss';
 @import './shared/form.scss';
