Improved the 404 page

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -20,6 +20,7 @@
 @import './pages/blog.scss';
 @import './pages/contact.scss';
 @import './pages/index.scss';
+@import './pages/notFound.scss';
 @import './pages/post.scss';
 @import './pages/shop.scss';
 @import './pages/product.scss';
