--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,6 +14,7 @@
 @import './components/pagination.scss';
 @import './components/sampleSiteCta.scss';
 @import './components/seoSection.scss';
+@import './components/snipcart.scss';
 @import './components/withArrow.scss';
 // PAGES
 @import './pages/about.scss';
