--- a/src/styles/pages/blog.scss
+++ b/src/styles/pages/blog.scss
@@ -74,7 +74,9 @@
 	border-radius: 8px 8px 0 0;
 
 	img {
-		max-width: 100%;
+		width: 100%;
+		max-height: 25.6rem;
 		object-fit: cover;
+		object-position: center;
 	}
 }
