--- a/src/styles/shared/button.scss
+++ b/src/styles/shared/button.scss
@@ -40,3 +40,10 @@
 	padding: 0 $xl-size;
 	height: 5.6rem;
 }
+
+.button--no-style {
+	background: none;
+	border: none;
+	outline: none;
+	cursor: pointer;
+}
