--- a/src/styles/components/animatedLogo.scss
+++ b/src/styles/components/animatedLogo.scss
@@ -1,3 +1,3 @@
 .animated-logo__pixel {
-	filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.9));
+	// filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.9));
 }
